Collapse repository management buttons into a drop-down menu Fixed arrow down alingment and dropdown label

--- a/ui/static/ui/css/mit-lore.css
+++ b/ui/static/ui/css/mit-lore.css
@@ -6,6 +6,7 @@
 
 *::after, *::before {
     content: '';
+    content: none;  /* for chrome and safari */
 }
 
 body {
@@ -509,4 +510,8 @@ ul.repos {
     list-style-type: none;
     padding: 0px;
     margin: 0px;
+}
+
+.dropdown-repository {
+    margin-left: 380px;
 }
